--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container">
+				<div class="resume__block">
+					<div class="main-info fh">
+
+						<div class="experiences">
+							A lot of experience in catching mice.
+						</div>
+
+						<div class="additional-info fv">
+							And bats as well!
+						</div>
+					</div>
+				</div>
+			</div>
         </div>
     </div>
 </main>
