--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8"/>
-    <title>Résumé</title>
+    <title>Vitalii Tymashkov Résumé</title>
 </head>
 <body>
 <main>
     <div class="resume">
         <div class="container">
             <div class="resume__block">
-                <h1 class="contact-info__header">Bulka</h1>
-                <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+                <h1 class="contact-info__header">Vitalii Tymashkov</h1>
+                <h3 class="contact-info__sub-header">Senior QA Automation Engineer</h3>
                 <div class="contact_info_container fh">
                     <div class="contact-info__block">
                         <a href="" rel="author" class="contact-info__item">
@@ -24,14 +24,14 @@
                                     </path>
                                 </svg>
                             </div>
-                            <span>Lviv, Ukraine</span>
+                            <span>Odesa, UA; Krakow, PL</span>
                         </a>
                     </div>
                     <div class="contact-info__block contact-info__block--center">
-                        <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                        <img class="contact-info__avatar" src="assets/tvv.jfif" alt="Avatar">
                     </div>
                     <div class="contact-info__block">
-                        <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
+                        <a href="https://www.linkedin.com/in/vitaliy-tymashkov-en/" rel="author"
                            class="contact-info__item">
                             <div class="contact-info__item-icon-wrapper">
                                 <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
@@ -41,7 +41,7 @@
                                     </path>
                                 </svg>
                             </div>
-                            <span>binary-studio</span>
+                            <span>vitaliy-tymashkov/</span>
                         </a>
                     </div>
                 </div>
@@ -56,10 +56,11 @@
                                 </path>
                             </svg>
                         </div>
-                        <p class="intro_text">Meow.
-                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                            all I do is sleep and try to help out hoomans with their projects whenever
-                            they need me.
+                        <p class="intro_text">A multi-skilled professional with strong self-motivation and extensive
+                            experience in Project Management, System Integration, Industrial Process Automation,
+                            Software Development, Quality Assurance and Testing. Has more than 10 years of experience in
+                            QA and Testing in Industrial Process Control Automation domain and in IT domain. Also has
+                            more than 10 years of experience in Team Leading and Project Management.
                         </p>
                     </div>
                 </div>
@@ -67,7 +68,8 @@
                     <div class="resume__block">
                         <div class="skills">
                             <h3 class="skills__header">Skills</h3>
-                            <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                            <p class="skills__text">Quality Assurance, Testing Microservices, Java, MySQL, SQLite,
+                                PostgreSQL, Python, SQL, People Management, Conflict Management </p>
                         </div>
                     </div>
                 </div>
@@ -78,18 +80,22 @@
                                 <h3 class="experiences__header">Experience</h3>
                                 <div class="experiences__company">
                                     <div class="experiences__company-header">
-                                        <span class="experiences__company-header-durability">For whole my life</span>
-                                        <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                                        <span class="experiences__company-header-durability">2021 May - Present</span>
+                                        <h3 class="experiences__company-header-name">Symphony Solutions</h3>
                                     </div>
 
                                     <div class="experiences__company-project">
-                                        <span class="experiences__company-project-role">Binary Studio Cat</span>
-                                        <h3 class="experiences__company-project-name">Hooman project</h3>
+                                        <span class="experiences__company-project-role">Sr QA Automation</span>
+                                        <h3 class="experiences__company-project-name">Reservation system</h3>
                                         <ul class="experiences__company-project-responsibilities">
-                                            <li>Supported hoomans</li>
-                                            <li>Slept all the time</li>
-                                            <li>Lied on the keyboard</li>
-                                            <li>Watched my hoomans working</li>
+                                            <li>Design and developing automation tools and test frameworks</li>
+                                            <li>Increasing the test coverage, creation and defining test scenarios</li>
+                                            <li>Active participation in the continuous improvement of the automation
+                                                strategy and framework
+                                            </li>
+                                            <li>Work with a global team and responsible for directing/reviewing the test
+                                                planning and execution work efforts
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -99,21 +105,26 @@
                                 <div class="additional-info__education">
                                     <h3 class="additional-info__education-header">Education</h3>
                                     <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability">2021</span>
-                                        <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                        <span class="additional-info__education-university-durability">1994 - 1999</span>
+                                        <h3 class="additional-info__education-university-speciality">Specialist's degree
+                                            in Computer Systems and Networks</h3>
+                                        <p class="additional-info__education-university-name"> ODESSА POLYTECHNIC STATE
+                                            UNIVERSITY</p>
                                     </div>
                                 </div>
                                 <div class="additional-info__languages">
                                     <h3 class="additional-info__languages-header">Languages</h3>
                                     <p class="additional-info__languages-item">
-                                        Meow dialect
+                                        Ukrainian (native)
                                     </p>
                                     <p class="additional-info__languages-item">
-                                        Ukrainian (understand)
+                                        English (C1)
                                     </p>
                                     <p class="additional-info__languages-item">
-                                        English (don't understand)
+                                        Polish (B1)
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        German (A2)
                                     </p>
                                 </div>
                             </div>
