Video in footer added

--- a/index.html
+++ b/index.html
@@ -135,5 +135,21 @@
         </div>
     </div>
 </main>
+<footer class="contact-info-container">
+    <div class="contact-info-header">
+        <h2>
+            A-a-a-A-A-aweso-o-O-O-oomene-e-E-E-ess!
+        </h2>
+        <h4>
+            Binary Studio Academy | UKR | How to work with Git by Viktoria Vasylenko
+        </h4>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HJ7NW6zatXo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
+    </div>
+</footer>
 </body>
 </html>
